--- a/fundooApp/css/style.css
+++ b/fundooApp/css/style.css
@@ -17,6 +17,11 @@ border: 2px solid #ccc;
 padding: 10px 40px 10px;
 word-wrap: break-word;
 }
+#close-btn{
+  margin-left: -420px;
+width: 10px;
+height: 10px;
+}
 .fonts{
   font-size: 18;
   font: Arial;
@@ -41,7 +46,7 @@ overflow: hidden;
   margin:-49px 0px 4px 357px;
 }
 #pinondashboard{
-  margin-left: 221px;
+  float: right;
 }
 .margintop-10{
   margin-top:-10px;
@@ -93,6 +98,10 @@ overflow: hidden;
   width:50px;
   height:50px;
 }
+.reminderimg{
+  width: 18px;
+height: 18px ;
+}
 .chip{
   margin: 0px auto;padding: 0px;
 }
@@ -110,7 +119,7 @@ overflow: hidden;
     border-radius: 10px;
 }
 #right{
-  right: -155px;
+  margin-left: 71px ;
 }
 #notecard1{
   width: 400px;
