--- a/fundooApp/templates/icon.html
+++ b/fundooApp/templates/icon.html
@@ -67,6 +67,25 @@
  </md-menu-content>
  </md-menu>
 
+<!-- <md-icon ngf-select ng-model="file"
+             accept="image/*" ngf-max-size="2MB" required
+             ngf-model-invalid="errorFile" ><i class="material-icons">photo</i>
+
+      <i ng-show="myForm.file.$error.required">*required</i><br>
+      <i ng-show="myForm.file.$error.maxSize">File too large
+          {{errorFile.size / 1000000|number:1}}MB: max 2M</i>
+      <img ng-show="myForm.file.$valid" ngf-thumbnail="picFile" class="thumb"> <button ng-click="picFile = null" ng-show="picFile">Remove</button>
+      <br>
+      <button ng-disabled="!myForm.$valid"
+              ng-click="uploadPic(picFile)">
+      <span class="progress" ng-show="picFile.progress >= 0">
+        <div style="width:{{picFile.progress}}%"
+            ng-bind="picFile.progress + '%'"></div>
+      </span>
+      <span ng-show="picFile.result">Upload Successful</span>
+      <span class="err" ng-show="errorMsg">{{errorMsg}}</span>
+</md-icon> -->
+
 <span  ng-click="imageSelect($event,note)">
   <md-icon><i class="material-icons" >photo</i></md-icon>
   <md-tooltip>Add image</md-tooltip>
