--- a/fundooApp/templates/dashboard.html
+++ b/fundooApp/templates/dashboard.html
@@ -11,69 +11,67 @@
   <div layout="row" layout-align="center center">
     <md-card ng-show="showWhenClicked" class="notecard">
 
-        <div contenteditable class="intial-text"  data-placeholder="Title" ng-model="title" id="notecard1" ng-bind-html></div>
+        <div contenteditable="true" class="intial-text"  data-placeholder="Title" ng-model="title" id="notecard1" ></div>
       <div layout="row" layout-align="end end" >  <md-button class="md-icon-button"><img src="images/pin0.svg" >
           <md-tooltip>pin</md-tooltip></md-button>
     </div>
-      <div contenteditable class="intial-text" data-placeholder="Take a note..." ng-model="description" id="notecard1"></div>
+      <div contenteditable="true" class="intial-text" data-placeholder="Take a note..." ng-model="description" id="notecard1"></div>
       <div><icon> </icon></div>
       <div><md-button ng-click="showWhenClicked=false;noteModel()" id="close-btn">CLOSE</md-button></div>
     </md-card>
   </div>
 
-
+  <div></div>
       <md-subheader  id="header-btn" class="pinother"><strong>Pinned</strong> </md-subheader>
       <div layout="row"  layout-align="center center" layout-wrap  data-ng-init="getAllNote()" layout-align="center center">
-        <md-card flex="30"class="dashboard"  ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)" style="background-color:{{note.color}};width:300px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText" >
-                    <md-card-title ng-click="showAdvanced($event,note)">
-                        <md-card-title-text>
-                          <div contenteditable class="contentsize"><strong ng-bind-html="note.title"> </strong>
-                        </md-card-title-text>
-                          </md-card-title>
-                          <span ng-click="updatePin(note)" id="pinondashboard">
-                            <img ng-if="note.pin === true" src="images/bluepin.svg">
-                            <img ng-if="note.pin === false" src="images/pin0.svg">
+        <md-card layout="column" flex="30" class="dashboard"  style="background-color:{{note.color}};width:300px;"  ng-repeat="note in notes |filter:{trash:false,pin:true,archive:false} |orderBy: '-notes':true |filter: searchText" >
+           <img  ng-src="{{note.image}}">
+            <div ><strong>{{note.title}}</strong>
+                    </div>
+                          <span ng-click="updatePin(note)"ng-if="note.imageUrl!==null" id="pinondashboard"></span>
+                            <img ng-if="note.pin === true" src="images/bluepin.svg" style="width: 18px;height: 18px;margin-left: 326px;margin-top: -17px;">
+                            <img ng-if="note.pin === false" src="images/pin0.svg"/>
                               <md-tooltip>Pin Note</md-tooltip>
-                          </span>
-                          </div>
-                    <md-card-content class="center" class="placesize">
-                      <div  contenteditable ng-bind-html="note.description"> </div>
+                    <md-card-content class="center" class="placesize" ng-click="showAdvanced($event)">
+                    <div newcontenteditable contenteditable="true" ng-bind-html="note.description"></div>
                     </md-card-content>
-                    <div  layout="row" >
+                    <div  layout="row">
                         <md-chips ng-if="note.reminderDate"  ng-mouseover="enableEdit(note)"  ng-mouseleave="disableEdit(note)">
                             <md-chip class="chip"><span class="chipstyle">{{note.reminderDate | date : 'MMM dd,HH:00 a'}}</span>
                               <span ng-click="removeReminder(note)" class="chip"><md-icon><i class="material-icons">close</i></md-icon></span ></md-chip>
                         </md-chips>
                       </div>
                       <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
-                        <md-chips ng-repeat="label in note.listOfLabels">
-                            <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button><md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip"><md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
+                        <md-chips ng-mouseover="enableEdit(label)"  ng-mouseleave="disableEdit(label)" ng-repeat="label in note.listOfLabels">
+                            <md-chip  class="chip"><span class="chip" ng-show="label.edit" >{{label.name}}</span><md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon></md-chip>
                         </md-chips>
                      </div>
 
                         <icon></icon>
+                      </div>
                 </md-card>
       </div>
 
 
     <md-subheader  id="header-btn" class="pinother"><strong>Others</strong> </md-subheader>
     <div  layout="row"  layout-align="center center"layout-wrap data-ng-init="getAllNote()" layout-align="center center" >
-      <md-card class="dashboard"flex="30" ng-mouseover="hoverIn($event)" ng-mouseleave="hoverOut($event)" style="background-color:{{note.color}};"  ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
-        <md-card-title ng-click="showAdvanced($event,note)">
+      <md-card class="dashboard"flex="30"  style="background-color:{{note.color}};"  ng-repeat="note in notes |filter:{trash:false,pin:false,archive:false} |orderBy: '-notes':true |filter: searchText">
+        <md-card-title ng-click="showAdvanced($event,note)" >
         <md-card-title-text>
-          <div contenteditable ><strong ng-bind-html="note.title"> </strong>
+          <div  newcontenteditable contenteditable="true" >{{note.title}}
         </md-card-title-text>
       </md-card-title>
+
                <md-button class="md-icon-button" ng-click="updatePin(note)" id="otherDash">
-                 <img ng-if="note.pin === true"  src="images/bluepin.svg">
+                 <img ng-if="note.pin === true"  src="images/bluepin.svg" >
                    <img ng-if="note.pin=== false"  src="images/pin0.svg">
                     <md-tooltip>Pin Note</md-tooltip>
-               </md-button>
+                  </md-button>
 
                </div>
 
-                  <md-card-content class="center">
-                     <div contenteditable ng-bind-html="note.description"></div>
+                  <md-card-content class="center" >
+                     <div newcontenteditable contenteditabl"true">{{note.description}}</div>
                   </md-card-content>
                   <div  layout="row" >
                       <md-chips ng-if="note.reminderDate">
@@ -82,10 +80,8 @@
                       </md-chips>
                     </div>
                     <div layout="row" ng-if="note.listOfLabels" layout-wrap layout-align="start space-around">
-                      <md-chips ng-repeat="label in note.listOfLabels">
-                          <md-chip  class="chip"><button ng-click="removeLabelOnNote(label,note)" style="border:none;outline:none;border-radius: 50px;margin-left: 5px;">{{label.name}}</button>
-                            <md-button ng-show="label.editable" class="md-icon-button" ng-click="removeLabel(label,note,$event)"  class="chip">
-                            <md-icon><i class="material-icons">close</i></md-icon></md-button></md-chip>
+                      <md-chips ng-mouseover="enableEdit(label)"  ng-mouseleave="disableEdit(label)" ng-repeat="label in note.listOfLabels">
+                          <md-chip  class="chip"><span class="chip" ng-show="label.edit" >{{label.name}}</span><md-icon ng-click="removeLabelOnNote(label,note)"><i class="material-icons">close</i></md-icon></md-chip>
                       </md-chips>
                    </div>
                   <div layout="row" style="height: 50px;" layout-align="space-around center">
